--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,9 +22,17 @@ dev_dependencies:
   flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/img/app_icon.jpg"
+  min_sdk_android: 16
 
 flutter:
   uses-material-design: true
 
   assets:
     - assets/img/
+    - assets/animation/
